--- a/src/global.css
+++ b/src/global.css
@@ -1,13 +1,13 @@
 * {
-  margin: 0
-  padding: 0
+  margin: 0;
+  padding: 0;
   box-sizing: border-box
 }
 
 body {
-  font-family: 'Arial', 'Helvetica', sans-serif
-  font-size: 16px
-  line-height: 1.5
-  -webkit-font-smoothing: antialiased
+  font-family: 'Arial', 'Helvetica', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale 
 }
